Clean up project1

--- a/project1/CMakeLists.txt
+++ b/project1/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(project1_solution)
+project(project1)
 
 ## Add support for C++11, supported in ROS Kinetic and newer
 # add_definitions(-std=c++11)
