--- a/utils/tf2_examples/package.xml
+++ b/utils/tf2_examples/package.xml
@@ -44,10 +44,12 @@
   <build_depend>rospy</build_depend>
   <build_depend>tf</build_depend>
   <build_depend>tf2_ros</build_depend>
+  <build_depend>marker_publisher</build_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>tf</run_depend>
   <run_depend>tf2_ros</run_depend>
+  <run_depend>marker_publisher</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
