--- a/project2/package.xml
+++ b/project2/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package>
-  <name>project2_solution</name>
+  <name>project2</name>
   <version>0.0.0</version>
-  <description>The project2_solution package</description>
+  <description>The project2 package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/project2_solution</url> -->
+  <!-- <url type="website">http://wiki.ros.org/project2</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
