--- a/project2/package.xml
+++ b/project2/package.xml
@@ -4,7 +4,7 @@
   <version>0.0.0</version>
   <description>The project2 package</description>
 
-  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
+  <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
   <maintainer email="emiliano@todo.todo">emiliano</maintainer>
@@ -42,8 +42,11 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>rospy</build_depend>
   <build_depend>roscpp</build_depend>
+  <build_depend>tf2_examples</build_depend>
+
   <run_depend>rospy</run_depend>
   <run_depend>roscpp</run_depend>
+  <run_depend>tf2_examples</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
