--- a/utils/kuka_lwr/robot_mover/package.xml
+++ b/utils/kuka_lwr/robot_mover/package.xml
@@ -11,15 +11,13 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <build_depend>forward_kinematics</build_depend>
   <build_depend>lwr_defs</build_depend>
-  <build_depend>robot_sim</build_depend>
+  <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
 
-  <run_depend>forward_kinematics</run_depend>
   <run_depend>lwr_defs</run_depend>
-  <run_depend>robot_sim</run_depend>
+  <run_depend>roscpp</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>std_msgs</run_depend>
 
