Play with MoveIt! and Gazebo simulation

--- a/project5/lwr_robot_moveit_config/package.xml
+++ b/project5/lwr_robot_moveit_config/package.xml
@@ -14,16 +14,21 @@
   <url type="bugtracker">https://github.com/ros-planning/moveit_setup_assistant/issues</url>
   <url type="repository">https://github.com/ros-planning/moveit_setup_assistant</url>
 
-  <run_depend>moveit_ros_move_group</run_depend>
-  <run_depend>moveit_planners_ompl</run_depend>
-  <run_depend>moveit_ros_visualization</run_depend>
-  <run_depend>joint_state_publisher</run_depend>
-  <run_depend>robot_state_publisher</run_depend>
-  <run_depend>xacro</run_depend>
-  <build_depend>lwr_defs</build_depend>
-  <run_depend>lwr_defs</run_depend>
-
-
   <buildtool_depend>catkin</buildtool_depend>
+  
+  <build_depend>lwr_defs</build_depend>
+  
+  <run_depend>joint_state_controller</run_depend>
+  <run_depend>joint_state_publisher</run_depend>
+  <run_depend>lwr_defs</run_depend>
+  <run_depend>moveit_planners_ompl</run_depend>
+  <run_depend>moveit_ros_move_group</run_depend>
+  <run_depend>moveit_ros_visualization</run_depend>
+  <run_depend>moveit_setup_assistant</run_depend>
+  <run_depend>moveit_simple_controller_manager</run_depend>
+  <run_depend>moveit_fake_controller_manager</run_depend>
+  <run_depend>robot_state_publisher</run_depend>
+  <run_depend>ros_control</run_depend>
+  <run_depend>xacro</run_depend>
   
 </package>
